2008-11-16 timystery
  * 
  * Removed invalid columns such as color and "show" from application's treeview
  * fixed orientation-switching bug
  * version bump to 0.10.99.7
  * switched -v to -V for version information
  * Tried to hide dialogs completely on desired settings

2008-11-03 timystery
  * Addded support for sysfs for linux 2.6.24++ but still without good checks
  in configure.in.in
  * Some translations updated by various people

2008-11-02 timystery
  * Stand-alone application with temperature-unit-choser and all sensor values
  at a glance
  * libnotify support for error messages
  * Netcat support for hddtemp
  * hard disk name swhen used with netcat

2008-10-26 timystery
  * New Xfce-style header
  * border around sensors scrolled window /  treeview

2008-10-21 timystery
  * Added tooltip onto sensors items list: "You can change values, names and
   colours by double-clicking the entry, editing the content, and pressing
    »Return« or selecting a different field."
  * Introduced separate handling of text labels for vertically aligned panels
  * aligned text label centered when being in vertical panels
  * Updated German translation
  * Changed order how clicks in the settings dialog are handled --
   remove old widget, update value, rebuild widget

2008-10-19 timystery
  * added own xfce4-sensors application to be used instead of xsensors
  * split functionality into panel plugin, library and application
  * began using libnotify for error messages where available
  * introduced checking for netcat/nc to be used as a replacement for hddtemp

2008-06-26 timystery
    * also offer suppress-checkbox in other failure dialogs
    * changed conditions for hddtemp error checking to check for valid pointer
    as well

2008-06-20/21 timystery
    * renaming of hddtemp and acpi features available
    * whitelist for sd and hd disks only
    * Update of German translation

2008-06-16 timystery
    * added switch to suppress hddtemp error dialog